--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE HTML>
+<html>
 <head>
   <title>Sdxhc234's Portfolio</title>
 </head>
@@ -7,4 +8,4 @@
   <h1>Hello Thank you for visiting here.</h1>
 </body>
 
-</HTML>
+</html>
